--- a/index.html
+++ b/index.html
@@ -20,26 +20,28 @@
     </div>
   </header>
   <main>
-    <section class="second-box container">
-      <h2 class="sbox-header">Quality Designs</h2>
-      <div class="row">
-        <p class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Dui vivamus arcu felis bibendum ut
-          tristique. Arcu dui vivamus arcu felis. Sociis natoque
-          penatibus et magnis dis. </p>
-          <p class="col">Felis donec et odio pellentesque diam volutpat. Aliquam
-            purus sit amet luctus venenatis. Turpis in eu mi
-            bibendum neque egestas congue quisque egestas.
-            Pellentesque sit amet porttitor eget dolor morbi non.</p>
+    <section class="second-box">
+      <div class="container">
+        <h2 class="sbox-header">Quality Designs</h2>
+        <div class="row">
+          <p class="col sp">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Dui vivamus arcu felis bibendum ut
+            tristique. Arcu dui vivamus arcu felis. Sociis natoque
+            penatibus et magnis dis. </p>
+            <p class="col sp">Felis donec et odio pellentesque diam volutpat. Aliquam
+              purus sit amet luctus venenatis. Turpis in eu mi
+              bibendum neque egestas congue quisque egestas.
+              Pellentesque sit amet porttitor eget dolor morbi non.</p>
+        </div>
       </div>
     </section>
 
 
-    <section class="third-box container">
-      <div class="row">
+    <section class="third-box">
+      <div class="container row">
         <div class="col">
-          <h2>Made custom for you</h2>
+          <h2 class="tbox-header">Made custom for you</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam.</p>
@@ -48,11 +50,11 @@
       </div>
     </section>
 
-    <section class="fourth-box container">
-      <div class="row">
+    <section class="fourth-box ">
+      <div class="container row">
         <img src="./img/image-02.jpg" alt="" class="second-img">
         <div class="col">
-          <h2>Created with care</h2>
+          <h2 class="fobox-header">Created with care</h2>
           <p>Felis donec et odio pellentesque diam volutpat. Aliquam
             purus sit amet luctus venenatis. Turpis in eu mi
             bibendum neque egestas congue quisque egestas.
